# final-year-project

./: .gitignore  .gitmodules  sdkconfig
components/jerryscript/: CMakeLists.txt
components/js_main_thread/: CMakeLists.txt
components/js_main_thread/include/: js_event.h  js_gpio.h  js_main_thread.h  js_timers.h
components/js_main_thread/src/: js_gpio.c  js_main_thread.c  js_timers.c
components/js_module_resolver/: CMakeLists.txt
components/js_module_resolver/include/: js_module_resolver.h
components/js_module_resolver/src/: js_module_resolver.c
components/js_std_lib/: CMakeLists.txt
components/js_std_lib/include/: js_std_lib.h
components/js_std_lib/src/: js_std_lib.c  module_console.c  module_console.h  module_gpio.c  module_gpio.h  module_timers.c  module_timers.h
js/: main.js  testConsole.js  testGPIO.js  testImport.js  testTimers.js
main/: CMakeLists.txt  code.c  idf_component.yml
tests/: intruder-alert.js  smart-light.js  tones.js
types/: gpio.d.ts
